tests/microk8s/monitoring-ingress.yaml
# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    #cert-manager.io/cluster-issuer: letsencrypt-issuer
    kubernetes.io/ingress.class: public
  name: monitoring
  namespace: openserverless
spec:
  rules:
  - host: monitoring.44.203.144.96.nip.io
    http:
      paths:
      - backend:
          service:
            name: openserverless-prometheus-server
            port:
              number: 9999
        path: /
        pathType: Prefix
  #tls:
  #- hosts:
  #  - monitoring.44.203.144.96.nip.io
  #  secretName: monitoring-letsencrypt-secret
